Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         <h1>
 <a name="avatar-the-last-airbender-live-wallpaper" class="anchor" href="#avatar-the-last-airbender-live-wallpaper"><span class="octicon octicon-link"></span></a>Avatar The Last Airbender Live Wallpaper</h1>
 
+<p><img src="https://lh4.ggpht.com/jx647koP4344FetcNoUdd0A-VvuvexAC1NQ6wfcj9m6aADLKTrm5ByULh70FKXKb_VZu=w300" alt=""></p>
+
 <h3>
 <a name="free-on-google-play" class="anchor" href="#free-on-google-play"><span class="octicon octicon-link"></span></a>Free on <a href="https://play.google.com/store/apps/details?id=com.matthewcmckenna.atlalivewallpaper">Google Play</a>
 </h3>
