Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,43 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Avatar the Last Airbender Live wallpaper by matthewcmckenna</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="description" content="Avatar the Last Airbender Live wallpaper : A free live wallpaper for your Android device.">
 
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Avatar the Last Airbender Live wallpaper</title>
   </head>
+
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/matthewcmckenna/atla-lwp">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/matthewcmckenna/atla-lwp/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/matthewcmckenna/atla-lwp/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
 
-    <div class="wrapper">
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/matthewcmckenna/atla-lwp">View on GitHub</a>
 
-      <section>
-        <div id="title">
-          <h1>Avatar the Last Airbender Live wallpaper</h1>
-          <p>A free live wallpaper for your Android device.</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/matthewcmckenna">matthewcmckenna</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
+          <h1 id="project_title">Avatar the Last Airbender Live wallpaper</h1>
+          <h2 id="project_tagline">A free live wallpaper for your Android device.</h2>
 
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/matthewcmckenna/atla-lwp/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/matthewcmckenna/atla-lwp/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a name="avatar-the-last-airbender-live-wallpaper" class="anchor" href="#avatar-the-last-airbender-live-wallpaper"><span class="octicon octicon-link"></span></a>Avatar The Last Airbender Live Wallpaper</h1>
 
@@ -56,9 +49,16 @@
 <img src="https://lh3.ggpht.com/zY1EXcJNRZZq-BUXpjET1IooCHxzKdj1POlA27u09dD1SkDvrDdL2qDJwFZFpyvxQ95g=h900" alt="">
 <img src="https://lh6.ggpht.com/7QY0DBa0na0-gHhFyJjzBFhMpijn8XA45hWMsxpg4qKnrY1eX1vsvWBKTpoRK38Nick=h900" alt=""></p>
       </section>
-
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Avatar the Last Airbender Live wallpaper maintained by <a href="https://github.com/matthewcmckenna">matthewcmckenna</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -69,6 +69,7 @@
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
+
 
   </body>
 </html>
